@@ -1,5 +1,10 @@
 2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03659] Can't download from SSL.
+	* istream.c (ISfileno): case IST_SSL
+
+2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03658] Re: Other user can see local cookie.
 	* fm.h (rc_dir): init(NULL)
 	* rc.c (config_file): deleted
@@ -6621,4 +6626,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.694 2003/01/20 15:24:19 ukai Exp $
+$Id: ChangeLog,v 1.695 2003/01/20 15:25:29 ukai Exp $
